# rust-tracing-otel-tutorial

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: custom_span_processor.rs  init.rs  main.rs  request_handling_logic.rs
