[package]
name = "tracing_otel_tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
#actix
actix-web = "4.4.1"

# async
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"


# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "json"] }
# the feature flag is new
tracing-actix-web = { version = "0.7.9", features = ["opentelemetry_0_21"] }
tracing-opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry = "0.21.0"